<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/rules_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules_text"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/best_score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_score_text"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/play_button_text"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

    </LinearLayout>

    <Button
        android:id="@+id/back_to_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu_button_text"
        android:textSize="18sp" />

</LinearLayout>
