<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/name_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/favorite_dictionary_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_dictionary_label" />

    <Spinner
        android:id="@+id/favorite_dictionary_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/dictionaries" />

    <CheckBox
        android:id="@+id/save_pages_locally_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_pages_locally" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Autres éléments de mise en forme et de contrôle -->

        <TextView
            android:id="@+id/words_per_wave_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LABEL" />

        <SeekBar
            android:id="@+id/words_per_wave_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

        />

        <TextView
            android:id="@+id/words_per_wave_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/words_per_wave" />

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Autres éléments de mise en forme et de contrôle -->

        <TextView
            android:id="@+id/notification_frequency_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_frequency_label" />

        <Spinner
            android:id="@+id/notification_frequency_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/notification_frequencies" />

        <TextView
            android:id="@+id/learning_language_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learning_language_label" />

        <Spinner
            android:id="@+id/learning_language_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/languages" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/select_dictionary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_dictionary_label"
            android:onClick="launchDictionaryManagement" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_label"
            android:onClick="saveSettings" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="finish"
            android:text="@string/cancel_label" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error"
        android:visibility="gone" />


    </LinearLayout>






</LinearLayout>
